[package]
authors = ["Your Name <you@example.com>"]
description = "Download and sync Google Nest camera events"
edition = "2024"
name = "nest-sync"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
filetime = "0.2"
iso8601-duration = "0.2"
prost = "0.14"
quick-xml = { version = "0.39", features = ["serialize"] }
rand = "0.9"
reqwest = { version = "0.13", features = ["form", "json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tonic = { version = "0.14", features = [
    "tls-native-roots",
    "tls-ring",
    "transport",
] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[build-dependencies]
tonic-prost-build = "0.14"
